--- a/Helloworld.html
+++ b/Helloworld.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>monster eight</title>
+        <title>monster eight~</title>
     </head>
     <body>
           Quanzo!!!!!
